hotfix: 질문 중복된 감정 질문 나오는거 필터링